Fix style and layout issues
* Use slightly less vertical spacing between lines.

* Use a span, not a div, for text block.

* Improve font handling for pre blocks.

--- a/src/css/light-mode.css
+++ b/src/css/light-mode.css
@@ -326,7 +326,7 @@ body {
     font-family: Open Sans, sans-serif;
     font-weight: 400;
     color: #0c0c0c;
-    line-height: 1.5;
+    line-height: 1.4;
     font-size: 15px;
     padding: 30px 10px 30px 10px;
     max-width: 800px;
@@ -369,7 +369,6 @@ blockquote em {
 figure {
     margin: 0;
     text-align: center;
-    font-size: 13px;
     font-weight: 400;
     font-style: italic;
 }
@@ -448,6 +447,7 @@ figure figcaption {
 
 pre {
     overflow-x: auto;
+    line-height: 1.2;
 }
 
 .header .site-title {
@@ -526,7 +526,7 @@ pre {
 
 .main code {
     font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-    font-size: .95em;
+    font-size: 13px;
 }
 
 .main code {
